--- a/implicit_intent/app/src/main/res/layout/activity_main.xml
+++ b/implicit_intent/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/website_edittext"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="@string/edt_open_web_hint"/>
 
     <Button
+        android:id="@+id/open_website_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="@string/btn_open_web_text"
+        android:onClick="openWebsite"/>
 
     <EditText
+        android:id="@+id/location_edittext"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="@string/edt_open_loc_hint"/>
 
     <Button
+        android:id="@+id/open_location_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="@string/btn_open_loc_text"
+        android:onClick="openLocation"/>
 
     <EditText
+        android:id="@+id/share_edittext"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="@string/edt_share_hint"/>
 
     <Button
+        android:id="@+id/share_text_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="@string/btn_share_text"
+        android:onClick="shareText"/>
 
 
 </LinearLayout>
